Committing Maven project eclipse related settings. Jira IDM-578
git-svn-id: http://arkham.ccci.org/svn/java/trunk/commons/sblio2@9048 6185d61c-cf3b-044e-8ca2-f4aa9eb47c87

--- a/.settings/org.maven.ide.eclipse.prefs
+++ b/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Mon Nov 29 10:14:29 EST 2010
+#Tue Aug 02 08:53:49 EDT 2011
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
