--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
     </dependency>
     
     <dependency>
+      <groupId>com.siebel</groupId>
+      <artifactId>SiebelJI_enu</artifactId>
+      <version>1.0</version>
+    </dependency>
+    
+    <dependency>
       <groupId>org.ccci</groupId>
       <artifactId>framework-core</artifactId>
       <version>1.0-SNAPSHOT</version>
