Add snapshots repository
This project currently depends on snapshots from Artifactory

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <name>Libraries (Full Releases)</name>
         <url>http://arkham.ccci.org/artifactory/libs-releases/</url>
       </repository>
+      <repository>
+        <snapshots>
+          <enabled>false</enabled>
+        </snapshots>
+        <id>cru-snapshots</id>
+        <url>http://arkham.ccci.org:80/artifactory/libs-snapshots-local</url>
+      </repository>
     </repositories>
     
     <pluginRepositories>
