--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
       <groupId>org.ccci</groupId>
       <artifactId>framework-core</artifactId>
       <version>2.0-SNAPSHOT</version>
+      <optional>true</optional>
     </dependency>
     
     <dependency>
@@ -167,7 +168,12 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
-    
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>14.0.1</version>
+    </dependency>
+
   </dependencies>
   
   <properties>
